--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,15 +24,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures {
+        compose true
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        useIR = true
     }
     dataBinding {
         enabled = true
+    }
+    composeOptions {
+        kotlinCompilerVersion '1.4.21'
+        kotlinCompilerExtensionVersion '1.0.0-alpha10'
     }
 }
 
@@ -52,4 +60,21 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     implementation "androidx.biometric:biometric:1.1.0"
+
+
+    implementation 'androidx.compose.ui:ui:1.0.0-beta01'
+    // Tooling support (Previews, etc.)
+    implementation 'androidx.compose.ui:ui-tooling:1.0.0-beta01'
+    // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
+    implementation 'androidx.compose.foundation:foundation:1.0.0-beta01'
+    // Material Design
+    implementation 'androidx.compose.material:material:1.0.0-beta01'
+    // Material design icons
+    implementation 'androidx.compose.material:material-icons-core:1.0.0-beta01'
+    implementation 'androidx.compose.material:material-icons-extended:1.0.0-beta01'
+    // Integration with observables
+    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta01'
+    implementation 'androidx.compose.runtime:runtime-rxjava2:1.0.0-beta01'
+    // UI Tests
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.0.0-beta01'
 }
