--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
     }
     composeOptions {
         kotlinCompilerVersion '1.4.21'
-        kotlinCompilerExtensionVersion '1.0.0-alpha10'
+        kotlinCompilerExtensionVersion compose_version
     }
 }
 
@@ -61,20 +61,13 @@ dependencies {
 
     implementation "androidx.biometric:biometric:1.1.0"
 
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.foundation:foundation-layout:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.material:material-icons-core:$compose_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
-    implementation 'androidx.compose.ui:ui:1.0.0-beta01'
-    // Tooling support (Previews, etc.)
-    implementation 'androidx.compose.ui:ui-tooling:1.0.0-beta01'
-    // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
-    implementation 'androidx.compose.foundation:foundation:1.0.0-beta01'
-    // Material Design
-    implementation 'androidx.compose.material:material:1.0.0-beta01'
-    // Material design icons
-    implementation 'androidx.compose.material:material-icons-core:1.0.0-beta01'
-    implementation 'androidx.compose.material:material-icons-extended:1.0.0-beta01'
-    // Integration with observables
-    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta01'
-    implementation 'androidx.compose.runtime:runtime-rxjava2:1.0.0-beta01'
-    // UI Tests
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.0.0-beta01'
+
 }
