--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
 
     implementation "androidx.biometric:biometric:1.1.0"
 
+    implementation "dev.chrisbanes.accompanist:accompanist-coil:0.6.1"
+
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.foundation:foundation-layout:$compose_version"
