--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,18 @@
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+
+    <receiver
+      android:name=".ui.notification.NotificationBroadcastReceiver"
+      android:exported="true">
+      <intent-filter>
+        <action android:name="android.intent.action.BOOT_COMPLETED" />
+        <action android:name="android.intent.action.INPUT_METHOD_CHANGED" />
+      </intent-filter>
+    </receiver>
+
+    <service android:name=".ui.notification.NotificationService" />
+
   </application>
 
 </manifest>
