--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
   package="com.example.androidtechsample">
 
   <uses-permission android:name="android.permission.VIBRATE" />
+  <uses-feature android:name="android.hardware.camera.any" />
+  <uses-permission android:name="android.permission.CAMERA" />
 
   <application
     android:name=".ui.App"
