--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.example.androidtechsample">
 
-  <uses-permission android:name="android.permission.VIBRATE" />
   <uses-feature android:name="android.hardware.camera.any" />
+
+  <uses-permission android:name="android.permission.VIBRATE" />
   <uses-permission android:name="android.permission.CAMERA" />
+  <uses-permission android:name="android.permission.FLASHLIGHT" />
 
   <application
     android:name=".ui.App"
