--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 import com.example.buildsrc.Dep
-import com.example.buildsrc.Versions
 
 buildscript {
     repositories {
@@ -10,10 +9,10 @@ buildscript {
         }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:${Versions.gradle}"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}"
-        classpath "org.jlleitschuh.gradle:ktlint-gradle:10.0.0"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:${Versions.hilt}"
+        classpath Dep.Kotlin.plugin
+        classpath Dep.gradle
+        classpath Dep.Ktlint.gradle
+        classpath Dep.Dagger.plugin
         classpath Dep.AndroidX.Navigation.safeArgs
     }
 }
