--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,7 @@ lint/tmp/
 .idea/jarRepositories.xml
 .idea/deploymentTargetDropDown.xml
 .idea/runConfigurations.xml
+.idea/kotlinc.xml
 
 .idea/inspectionProfiles/
 
