checkout-v3 & add distribution

--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -12,12 +12,13 @@ jobs:
     steps:
       # チェックアウト
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       # JDKのセットアップ
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: '11'
 
         # コンパイル
