--- a/composeapp/src/main/AndroidManifest.xml
+++ b/composeapp/src/main/AndroidManifest.xml
@@ -21,6 +21,16 @@
       </intent-filter>
     </activity>
 
+    <receiver android:name=".SquareWidgetReceiver"
+      android:exported="false">
+      <intent-filter>
+        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+      </intent-filter>
+      <meta-data
+        android:name="android.appwidget.provider"
+        android:resource="@xml/square_widget_meta_data" />
+    </receiver>
+
   </application>
 
 </manifest>
